# KDE-Color-Translucency

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ColorTranslucencyConfig.kcfgc  ColorTranslucencyEffect.cpp  ColorTranslucencyEffect.h  ColorTranslucencyShader.cpp  ColorTranslucencyShader.h  metadata.json  options.kcfg  plugin.cpp
src/kcm/: CMakeLists.txt  ColorTranslucencyKCM.cpp  ColorTranslucencyKCM.h  ColorTranslucencyKCM.ui  metadata.json  plugin.cpp
src/shaders/: colortranslucency.frag  colortranslucency_core.frag
